eto-pet-kubernetes/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024g
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: web-ingress
  namespace: eto-pet
spec:
  tls:
    - hosts:
        - eto.pet
      secretName: eto-tls
  ingressClassName: nginx
  rules:
    - host: eto.pet
      http:
        paths:
        - path: /api(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: backend
              port:
                number: 8080
